# Automation

./: .dockerignore  .flake8  .gitignore  .gitmodules  .qoderignore  AGENTS.md  QODER.md  README.md  pyproject.toml  requirements.lock.txt  部署.md
.github/workflows/: ci.yml  deploy.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: qodercli.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
AirflowService/: operators.py
automation/: __init__.py
automation/client/: __init__.py  exceptions.py
automation/conf/: __init__.py  utils.py
automation/utils/: __init__.py
deploy/: .env.example  Dockerfile  compose.production.yml  compose.staging.yml  compose.yml  entrypoint.sh
deploy/scripts/: deploy.sh  scheduler.sh
dispatcher/: .dockerignore  .env  Dockerfile  TODO清单.md  docker-compose.yml  fix_airflow.sh  rebuild.sh  requirements.txt  restart_airflow.sh  test_maxcompute_master.sh  yaml
dispatcher/archive/: fix_airflow.sh
dispatcher/config/: maxcompute_connection.py
dispatcher/dags/: .gitkeep  __init__.py
dispatcher/hooks/: __init__.py
scripts/: pull_cron_logs.sh
tests/: conftest.py  test_date_window.py  test_date_window_new.py  test_e2e_store_stat_upload.py  test_quality_reject_e2e.py  test_store_stat_config.py  test_store_stat_date_window.py  test_store_stat_row_key.py  test_store_stat_transformer.py  test_transformer.py
utils/: _check.py
workers/: AGENTS.md  __init__.py  cron_task.sh  okr_cron.sh
(+143 files in other folders)
