[project]
name = "automation"
version = "0.1.0"
description = "Automation tools for Lark and MaxCompute integration"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyodps>=0.11.0",
    "requests>=2.28.0",
    "requests-toolbelt>=0.9.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["automation*", "workers*", "dispatcher*", "AirflowService*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "ipython>=9.0.0",
]
